[gd_scene load_steps=7 format=3 uid="uid://b2bqjw3vj8yos"]

[ext_resource type="Theme" uid="uid://n4xnq7y5o8cc" path="res://themes_fonts/default_theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://cn2852htr0rio" path="res://subscenes/players/players.tscn" id="2"]
[ext_resource type="Script" path="res://start.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://blsrde03xw8aa" path="res://subscenes/maps/maps.tscn" id="4"]
[ext_resource type="PackedScene" path="res://subscenes/tournament/tournament_editor.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dgwo25j4wvng2" path="res://subscenes/broadcast/broadcast_main.tscn" id="6"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Maps" type="Button" parent="Menu"]
layout_mode = 2
theme = ExtResource("1")
text = "Manage maps"

[node name="Players" type="Button" parent="Menu"]
layout_mode = 2
theme = ExtResource("1")
text = "Manage players"

[node name="Tournament" type="Button" parent="Menu"]
layout_mode = 2
theme = ExtResource("1")
text = "Manage tournament"

[node name="Play" type="Button" parent="Menu"]
layout_mode = 2
theme = ExtResource("1")
text = "Play the tournament"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
theme = ExtResource("1")
text = "Exit"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -80.0
offset_right = 250.0
offset_bottom = -10.0
theme = ExtResource("1")
text = "Save"

[node name="Players" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 1

[node name="Maps" parent="." instance=ExtResource("4")]
visible = false
layout_mode = 1

[node name="TournamentEditor" parent="." instance=ExtResource("5")]
visible = false
anchors_preset = 0

[node name="BroadcastBG" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0

[connection signal="tree_exiting" from="." to="." method="_on_Start_tree_exiting"]
[connection signal="pressed" from="Menu/Maps" to="." method="_on_Maps_pressed"]
[connection signal="pressed" from="Menu/Players" to="." method="_on_Players_pressed"]
[connection signal="pressed" from="Menu/Tournament" to="." method="_on_Tournament_pressed"]
[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
